ordertrace/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordertrace
  labels:
    app: ordertrace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordertrace
  template:
    metadata:
      labels:
        app: ordertrace
    spec:
      containers:
        - name: ordertrace
          image: skccacr.azurecr.io/ordertrace:latest
          ports:
            - containerPort: 8080
          #readinessProbe:
          #  httpGet:
          #    path: '/actuator/health'
          #    port: 8080
          #  initialDelaySeconds: 10
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 10
          #livenessProbe:
          #  httpGet:
          #    path: '/actuator/health'
          #    port: 8080
          #  initialDelaySeconds: 120
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 5
