ordertrace/kubernetes/virtual-service.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-ordertrace-network-rule
  spec:
    hosts:
    - ordertrace
    http:
    - route:
      - destination:
          host: ordertrace
      timeout: 3s
